--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 </head>
 
 <body>
+
   <div class="container">
-    <div class="card">
+    <div class="card" id="bg1">
       <h1>McCarthy's World</h1>
         <img id="me-img" src ="images/me.jpeg">
       <h2>SQL Database Designer🤓</h2>
     </div>
-    <div class="card">
+    <div class="card" id="bg2">
       <p>Full time learner of programming, Gaming Network Beat em hub Core member. a pretty chilled dude.</p>
       <p>Click the button to check my shiz..</p>
       <div class="box-1">
@@ -29,10 +30,11 @@
         </div>
       </div>
     </div>
-    <div class="card">
+
+    <div class="card" id = "bg3">
         <ul class = "list-inline">
           <li>
-            <a href="https://www.facebook.com/chris.mccarthy.988/"">
+            <a href="https://www.facebook.com/chris.mccarthy.988/">
               <i class="fab fa-facebook-f"></i>
             </a>
           </li>
@@ -49,5 +51,6 @@
         </ul>
     </div>
   </div>
+  <script src="index.js"></script>
 </body>
 </html>
