--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <div class="card" id="bg1">
       <h1>McCarthy's World</h1>
         <img id="me-img" src ="images/me.jpeg">
-      <h2>SQL Database Designer🤓</h2>
+      <h2>I love SQL databases! 💙</h2>
     </div>
     <div class="card" id="bg2">
-      <p>Full time learner of programming, Gaming Network Beat em hub Core member. a pretty chilled dude.</p>
-      <p>Click the button to check my shiz..</p>
+      <p>Full time programmer, producer, Gaming Network "Beat em Hub" core Nerd!</p>
+      <p>Click the button to check Beat Em Hub!</p>
       <div class="box-1">
         <div class="btn btn-one">
-          <span>Click me!</span>
-        </div>
+          <a href="https://beatemhub.com/">Click me!</a>
+      </div>
       </div>
     </div>
 
